Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -220,3 +220,62 @@ stateDiagram-v2
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
+
+---
+
+The Bell–LaPadula Model (BLP) is a mandatory access control (MAC) model designed to enforce confidentiality in secure systems. Developed in 1973 for military and government use, it prevents unauthorized access to classified data by restricting read and write operations based on security levels. 
+
+Key Concepts of Bell–LaPadula:
+
+- Goal: Protect confidentiality by ensuring users can only access data at or below their clearance level.
+- Security Levels: Data and users are classified hierarchically (e.g., Top Secret, Secret, Confidential, Unclassified).
+- Access Control: Uses Mandatory Access Control (MAC) and incorporates Discretionary Access Control (DAC) through the Discretionary Security Property.
+
+The core Security rules of the model are:
+1️. No Read Up (Simple Security Property): Users cannot read data at a higher security level than their own. Prevents unauthorized users from accessing classified information. Example: A Secret-level analyst cannot read a Top Secret file.
+2️. No Write Down (Star Property, -Property): Users cannot write to a lower security level. Prevents leaks of sensitive information by blocking downgrades. Example: A Top Secret officer cannot save a classified report in an Unclassified document.
+3️. Discretionary Security Property (ds-property): Enforces additional access restrictions based on permissions set by the data owner. Even if a user has the right security level, they must also be granted access. Example: A Secret user cannot access a Secret document unless they have explicit permission.
+
+Strengths  of the model:
+- Enforces strict confidentiality (ideal for government/military).
+- Prevents unauthorized access and leaks of classified data.
+- Combines MAC and DAC for better security.
+
+
+Limitations of the model:
+- Does not protect data integrity (modifications are not controlled).
+- Not suitable for commercial environments requiring flexible access.
+- Vulnerable to covert channels, where users infer information indirectly.
+
+```mermaid
+stateDiagram-v2
+    direction TB
+
+    [*] --> Unclassified
+    Unclassified --> Confidential : read (✔) / write (❌)
+    Confidential --> Unclassified : read (❌) / write (✔)
+
+    Confidential --> Secret : read (✔) / write (❌)
+    Secret --> Confidential : read (❌) / write (✔)
+
+    Secret --> TopSecret : read (✔) / write (❌)
+    TopSecret --> Secret : read (❌) / write (✔)
+
+    state Unclassified {
+        note right of Unclassified
+          Lowest level
+          Everyone can read
+        end note
+    }
+
+    state TopSecret {
+        note right of TopSecret
+          Highest level
+          Few can access
+        end note
+    }
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+:brain: The Bell-LaPadula Model focuses on maintaining confidentiality by enforcing two (+1 ds-property) key rules: the "no read up" (a subject cannot read data at a higher security level) and the "no write down" (a subject cannot write data to a lower security level). It ensures data confidentiality by restricting access based on security clearances.
