Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -248,32 +248,29 @@ Limitations of the model:
 - Vulnerable to covert channels, where users infer information indirectly.
 
 ```mermaid
+
 stateDiagram-v2
     direction TB
 
     [*] --> Unclassified
-    Unclassified --> Confidential : read (✔) / write (❌)
-    Confidential --> Unclassified : read (❌) / write (✔)
+    Unclassified --> Confidential : read (✔)\nwrite (❌)
+    Confidential --> Unclassified : read (❌)\nwrite (✔)
 
-    Confidential --> Secret : read (✔) / write (❌)
-    Secret --> Confidential : read (❌) / write (✔)
+    Confidential --> Secret : read (✔)\nwrite (❌)
+    Secret --> Confidential : read (❌)\nwrite (✔)
 
-    Secret --> TopSecret : read (✔) / write (❌)
-    TopSecret --> Secret : read (❌) / write (✔)
+    Secret --> TopSecret : read (✔)\nwrite (❌)
+    TopSecret --> Secret : read (❌)\nwrite (✔)
 
-    state Unclassified {
-        note right of Unclassified
-          Lowest level
-          Everyone can read
-        end note
-    }
+    note right of Unclassified
+      Lowest level\n"everyone" can read
+    end note
 
-    state TopSecret {
-        note right of TopSecret
-          Highest level
-          Few can access
-        end note
-    }
+    note right of TopSecret
+      Highest level\nvery restricted access
+    end note
+
+
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
