Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -252,22 +252,25 @@ Limitations of the model:
 stateDiagram-v2
     direction TB
 
-    [*] --> Unclassified
-    Unclassified --> Confidential : read (✔)\nwrite (❌)
-    Confidential --> Unclassified : read (❌)\nwrite (✔)
+    state "User (Secret Level)" as User
+    state "File A (Top Secret)" as FileTS
+    state "File B (Secret)" as FileS
+    state "File C (Confidential)" as FileC
 
-    Confidential --> Secret : read (✔)\nwrite (❌)
-    Secret --> Confidential : read (❌)\nwrite (✔)
+    User --> FileTS : ❌ Read (No Read Up)
+    User --> FileS : ✅ Read
+    User --> FileC : ✅ Write (❌ in real model)
 
-    Secret --> TopSecret : read (✔)\nwrite (❌)
-    TopSecret --> Secret : read (❌)\nwrite (✔)
-
-    note right of Unclassified
-      Lowest level\n"everyone" can read
+    note right of FileTS
+      Higher level\nCan't read (No Read Up)
     end note
 
-    note right of TopSecret
-      Highest level\nvery restricted access
+    note right of FileC
+      Lower level\nCan't write (No Write Down)
+    end note
+
+    note left of User
+      "Secret-level" user\nwants to access data
     end note
 
 
