Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -262,15 +262,15 @@ stateDiagram-v2
     User --> FileC : ✅ Write (❌ in real model)
 
     note right of FileTS
-      Higher level\nCan't read (No Read Up)
+      Higher level Can't read (No Read Up)
     end note
 
     note right of FileC
-      Lower level\nCan't write (No Write Down)
+      Lower level Can't write (No Write Down)
     end note
 
     note left of User
-      "Secret-level" user\nwants to access data
+      "Secret-level" user wants to access data
     end note
 
 
