Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -232,8 +232,11 @@ Key Concepts of Bell–LaPadula:
 - Access Control: Uses Mandatory Access Control (MAC) and incorporates Discretionary Access Control (DAC) through the Discretionary Security Property.
 
 The core Security rules of the model are:
+
 1️. No Read Up (Simple Security Property): Users cannot read data at a higher security level than their own. Prevents unauthorized users from accessing classified information. Example: A Secret-level analyst cannot read a Top Secret file.
+
 2️. No Write Down (Star Property, -Property): Users cannot write to a lower security level. Prevents leaks of sensitive information by blocking downgrades. Example: A Top Secret officer cannot save a classified report in an Unclassified document.
+
 3️. Discretionary Security Property (ds-property): Enforces additional access restrictions based on permissions set by the data owner. Even if a user has the right security level, they must also be granted access. Example: A Secret user cannot access a Secret document unless they have explicit permission.
 
 Strengths  of the model:
@@ -258,8 +261,8 @@ stateDiagram-v2
     state "File C (Confidential)" as FileC
 
     User --> FileTS : ❌ Read (No Read Up)
-    User --> FileS : ✅ Read
-    User --> FileC : ✅ Write (❌ in real model)
+    User --> FileS : ✅ Read ✅ Write
+    User --> FileC : ❌ Write (No Write Down)
 
     note right of FileTS
       Higher level Can't read (No Read Up)
