Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -223,7 +223,7 @@ stateDiagram-v2
 
 ---
 
-The Bell–LaPadula Model (BLP) is a mandatory access control (MAC) model designed to enforce confidentiality in secure systems. Developed in 1973 for military and government use, it prevents unauthorized access to classified data by restricting read and write operations based on security levels. 
+The **Bell–LaPadula Model (BLP)** is a mandatory access control (MAC) model designed to enforce confidentiality in secure systems. Developed in 1973 for military and government use, it prevents unauthorized access to classified data by restricting read and write operations based on security levels. 
 
 Key Concepts of Bell–LaPadula:
 
@@ -282,3 +282,67 @@ stateDiagram-v2
 ```
 
 :brain: The Bell-LaPadula Model focuses on maintaining confidentiality by enforcing two (+1 ds-property) key rules: the "no read up" (a subject cannot read data at a higher security level) and the "no write down" (a subject cannot write data to a lower security level). It ensures data confidentiality by restricting access based on security clearances.
+
+
+The **Biba Model** is a mandatory access control (MAC) model designed to enforce data integrity. Developed in 1977 by Kenneth Biba, it prevents unauthorized modifications to data by restricting read and write operations based on integrity levels. Unlike the Bell–LaPadula Model, which focuses on confidentiality, the Biba Model ensures that data remains accurate and unaltered. 
+
+Key Concepts of the Biba Model
+
+- Goal: Protect data integrity by ensuring users can only modify data at or above their integrity level.
+- Integrity Levels: Data and users are classified hierarchically (e.g., High, Medium, Low).
+- Access Control: Uses Mandatory Access Control (MAC) to restrict data modification.
+
+The Core Security Rules of the Biba Model are:
+
+1. No Write Up (Simple Integrity Property)
+
+  Users cannot write data at a higher integrity level than their own.
+
+  Prevents untrusted users from modifying critical data.
+
+2. No Read Down (Star Integrity Property, -Property)
+
+  Users cannot read data at a lower integrity level.
+
+  Prevents contamination of high-integrity data by unreliable sources.
+
+Strengths of the model:
+
+- Ensures data integrity, making it ideal for financial and critical systems.
+- Prevents unauthorized modifications and data corruption.
+- Protects against malware by restricting low-integrity processes.
+
+Limitations of the model:
+
+- Does not address confidentiality (focuses only on integrity).
+- Not suitable for systems where users need to access and modify lower-level data.
+- Can be restrictive in dynamic environments where data needs to flow between different levels.
+
+```mermaid
+stateDiagram-v2
+    direction TB
+
+    state "User (Medium Integrity)" as User
+    state "File A (High)" as FileHigh
+    state "File B (Medium)" as FileMed
+    state "File C (Low)" as FileLow
+
+    User --> FileHigh : ❌ Write (No Write Up)
+    User --> FileMed : ✅ Read/Write
+    User --> FileLow : ❌ Read (No Read Down)
+
+    note right of FileHigh
+      Higher level\nCan't write (No Write Up)
+    end note
+
+    note right of FileLow
+      Lower level\nCan't read (No Read Down)
+    end note
+
+    note left of User
+      "Medium-level" user\nwants to preserve integrity
+    end note
+```
+
+
+:brain: The Biba Model focuses on maintaining data integrity by enforcing two key rules: the "no write up" (a subject cannot write to a higher security level) and the "no read down" (a subject cannot read data at a lower security level). It ensures that data is not corrupted by unauthorized modifications.
