Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -332,15 +332,15 @@ stateDiagram-v2
     User --> FileLow : ❌ Read (No Read Down)
 
     note right of FileHigh
-      Higher level\nCan't write (No Write Up)
+      Higher level Can't write (No Write Up)
     end note
 
     note right of FileLow
-      Lower level\nCan't read (No Read Down)
+      Lower level Can't read (No Read Down)
     end note
 
     note left of User
-      "Medium-level" user\nwants to preserve integrity
+      "Medium-level" user wants to preserve integrity
     end note
 ```
 
