Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -346,3 +346,68 @@ stateDiagram-v2
 
 
 :brain: The Biba Model focuses on maintaining data integrity by enforcing two key rules: the "no write up" (a subject cannot write to a higher security level) and the "no read down" (a subject cannot read data at a lower security level). It ensures that data is not corrupted by unauthorized modifications.
+
+
+The **Take-Grant Model** is an access control model used to analyze and enforce access rights in a system. It describes how rights can be transferred between subjects (users, processes) and objects (files, resources) within a system. This model is useful for understanding how permissions can propagate and whether unauthorized access can occur.
+
+The Key Concepts of the Take-Grant Model are:
+
+- Goal: Model and analyze how permissions spread between subjects and objects.
+- Graph Representation: The system is represented as a directed graph, where:
+    - Nodes represent subjects (users, processes) and objects (files, resources).
+    - Edges (arrows) represent the rights that subjects have over objects.
+- Access Rights: Can include read, write, execute, delete, or grant permissions.
+- Two Main Operations: Take and Grant determine how permissions are transferred.
+
+The Core Rules of the Take-Grant Model are:
+
+1. Take Rule: A subject with take rights over another subject or object can acquire any rights from it.
+2. Grant Rule: A subject with grant rights can give its access rights to another subject.
+3. Create Rule: A subject can create new objects and assign permissions to them.
+4. Remove Rule: A subject can remove rights it previously granted.
+
+Strengths of the Take-Grant Model:
+
+- Models access rights propagation clearly using a graph-based approach.
+- Helps predict security risks by analyzing how permissions can spread.
+- Efficient and simple to implement in many access control scenarios.
+
+Limitations of the Take-Grant Model:
+
+- Does not enforce access control policies, only analyzes them.
+- Assumes all rights are transferable, which is not always the case in real-world systems.
+- Not designed for mandatory access control (MAC) systems, where permissions are strictly defined by policies.
+
+```mermaid
+stateDiagram-v2
+    direction TB
+
+    state "Alice" as Alice
+    state "Bob" as Bob
+    state "File.txt" as File
+
+    Alice --> Bob : Grant 'r'
+    Bob --> File : Take 'r'
+    Bob --> File : Read (✅ if 'r' is held)
+
+    note right of Alice
+      Alice has 'r' on File\nand grants it to Bob
+    end note
+
+    note right of Bob
+      Bob uses 'Take' to get 'r'\nfrom Alice or another source
+    end note
+
+    note right of File
+      Objects like files\ncan be accessed if rights exist
+    end note
+```
+
+
+
+
+
+
+
+:brain: The Take-Grant Model is a permission-based access control model where subjects (users or processes) can take or grant access to objects (files, resources) based on their permissions. The model defines a set of rules that determine how permissions are transferred between subjects and objects, ensuring controlled access and authority delegation.
+
