Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -391,23 +391,17 @@ stateDiagram-v2
     Bob --> File : Read (✅ if 'r' is held)
 
     note right of Alice
-      Alice has 'r' on File\nand grants it to Bob
+      Alice has 'r' on File and grants it to Bob
     end note
 
     note right of Bob
-      Bob uses 'Take' to get 'r'\nfrom Alice or another source
+      Bob uses 'Take' to get 'r' from Alice or another source
     end note
 
     note right of File
-      Objects like files\ncan be accessed if rights exist
+      Objects like files can be accessed if rights exist
     end note
 ```
-
-
-
-
-
-
 
 :brain: The Take-Grant Model is a permission-based access control model where subjects (users or processes) can take or grant access to objects (files, resources) based on their permissions. The model defines a set of rules that determine how permissions are transferred between subjects and objects, ensuring controlled access and authority delegation.
 
