Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -379,28 +379,46 @@ Limitations of the Take-Grant Model:
 - Not designed for mandatory access control (MAC) systems, where permissions are strictly defined by policies.
 
 ```mermaid
-stateDiagram-v2
-    direction TB
+flowchart TB
 
-    state "Alice" as Alice
-    state "Bob" as Bob
-    state "File.txt" as File
+subgraph Take_Rule
+    direction LR
+    S1_Take1[["S1"]] -->|r| O1_Take1[["O1"]] -->|r| O2_Take1[["O2"]]
+    S1_Take2[["S1"]] -->|r| O1_Take2[["O1"]] -->|r| O2_Take2[["O2"]]
+    S1_Take2 -->|r| O2_Take2
+    label1[Take Rule (Before)]:::label --> S1_Take1
+    label2[Take Rule (After)]:::label --> S1_Take2
+end
 
-    Alice --> Bob : Grant 'r'
-    Bob --> File : Take 'r'
-    Bob --> File : Read (✅ if 'r' is held)
+subgraph Grant_Rule
+    direction LR
+    O1_Grant1[["O1"]] -->|g| S1_Grant1[["S1"]] -->|r| O2_Grant1[["O2"]]
+    O1_Grant2[["O1"]] -->|g| S1_Grant2[["S1"]] -->|r| O2_Grant2[["O2"]]
+    S1_Grant2 -->|r| O2_Grant2
+    label3[Grant Rule (Before)]:::label --> O1_Grant1
+    label4[Grant Rule (After)]:::label --> O1_Grant2
+end
 
-    note right of Alice
-      Alice has 'r' on File and grants it to Bob
-    end note
+subgraph Create_Rule
+    direction LR
+    S1_Create1[["S1"]] -->|g| O1_Create1[["O1"]] -->|r| O2_Create1[["O2"]]
+    S1_Create2[["S1"]] -->|g| O1_Create2[["O1"]] -->|r| O2_Create2[["O2"]]
+    S1_Create2 -->|r| O2_Create2
+    S1_Create2 -->|r| O1_Create2
+    label5[Create Rule (Before)]:::label --> S1_Create1
+    label6[Create Rule (After)]:::label --> S1_Create2
+end
 
-    note right of Bob
-      Bob uses 'Take' to get 'r' from Alice or another source
-    end note
+subgraph Remove_Rule
+    direction LR
+    S1_Remove1[["S1"]] -->|wr| O1_Remove1[["O1"]]
+    S1_Remove2[["S1"]] -->|r| O1_Remove2[["O1"]]
+    label7[Remove Rule (Before)]:::label --> S1_Remove1
+    label8[Remove Rule (After)]:::label --> S1_Remove2
+end
 
-    note right of File
-      Objects like files can be accessed if rights exist
-    end note
+
+
 ```
 
 :brain: The Take-Grant Model is a permission-based access control model where subjects (users or processes) can take or grant access to objects (files, resources) based on their permissions. The model defines a set of rules that determine how permissions are transferred between subjects and objects, ensuring controlled access and authority delegation.
