Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -395,8 +395,8 @@ subgraph Grant_Rule
     O1_Grant1[["O1"]] -->|g| S1_Grant1[["S1"]] -->|r| O2_Grant1[["O2"]]
     O1_Grant2[["O1"]] -->|g| S1_Grant2[["S1"]] -->|r| O2_Grant2[["O2"]]
     S1_Grant2 -->|r| O2_Grant2
-    label3[Grant Rule (Before)]:::label --> O1_Grant1
-    label4[Grant Rule (After)]:::label --> O1_Grant2
+    label3[Grant Rule - Before]:::label --> O1_Grant1
+    label4[Grant Rule - After]:::label --> O1_Grant2
 end
 
 subgraph Create_Rule
@@ -405,16 +405,16 @@ subgraph Create_Rule
     S1_Create2[["S1"]] -->|g| O1_Create2[["O1"]] -->|r| O2_Create2[["O2"]]
     S1_Create2 -->|r| O2_Create2
     S1_Create2 -->|r| O1_Create2
-    label5[Create Rule (Before)]:::label --> S1_Create1
-    label6[Create Rule (After)]:::label --> S1_Create2
+    label5[Create Rule - Before]:::label --> S1_Create1
+    label6[Create Rule - After]:::label --> S1_Create2
 end
 
 subgraph Remove_Rule
     direction LR
     S1_Remove1[["S1"]] -->|wr| O1_Remove1[["O1"]]
     S1_Remove2[["S1"]] -->|r| O1_Remove2[["O1"]]
-    label7[Remove Rule (Before)]:::label --> S1_Remove1
-    label8[Remove Rule (After)]:::label --> S1_Remove2
+    label7[Remove Rule - Before]:::label --> S1_Remove1
+    label8[Remove Rule - After]:::label --> S1_Remove2
 end
 
 
