Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -389,8 +389,8 @@ subgraph Take_Rule
     S1_Take1[["S1"]] -->|t| O1_Take1[["O1"]] -->|r| O2_Take1[["O2"]]
     S1_Take2[["S1"]] -->|r| O1_Take2[["O1"]] -->|r| O2_Take2[["O2"]]
     S1_Take2[["S1"]] -->|r| O2_Take2[["O2"]]
-    label1[Take Rule  - Before]:::label -- S1_Take1
-    label2[Take Rule - After]:::label -- S1_Take2
+    label1[Take Rule  - Before]:::label <--> S1_Take1
+    label2[Take Rule - After]:::label <--> S1_Take2
 end
 
 subgraph Grant_Rule
