--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -388,18 +388,19 @@ subgraph Take_Rule
     direction LR
     S1_Take1[["S1"]] -->|t| O1_Take1[["O1"]] -->|r| O2_Take1[["O2"]]
     S1_Take2[["S1"]] -->|r| O1_Take2[["O1"]] -->|r| O2_Take2[["O2"]]
-    S1_Take2[["S1"]] -->|r| O2_Take2[["O2"]]
-    label1[Take Rule  - Before]:::label <--> S1_Take1
-    label2[Take Rule - After]:::label <--> S1_Take2
+    S1_Take2[["S1"]] ==>|r| O2_Take2[["O2"]]
+    label1[Take Rule  - Before]:::label -.- S1_Take1
+    label2[Take Rule - After]:::label -.- S1_Take2
 end
 
 subgraph Grant_Rule
     direction LR
-    O1_Grant1[["O1"]] -->|g| S1_Grant1[["S1"]] -->|r| O2_Grant1[["O2"]]
-    O1_Grant2[["O1"]] -->|g| S1_Grant2[["S1"]] -->|r| O2_Grant2[["O2"]]
-    S1_Grant2 -->|r| O2_Grant2
-    label3[Grant Rule - Before]:::label --> O1_Grant1
-    label4[Grant Rule - After]:::label --> O1_Grant2
+    S1_Grant1[["S1"]] -->|g| O1_Grant1[["O1"]]
+    S1_Grant1[["S1"]] -->|r| O2_Grant1[["O2"]]
+    S1_Grant2[["S1"]] -->|g| O1_Grant2[["O1"]] -->|r| O2_Grant2[["O2"]]
+    S1_Grant2[["S1"]] ==>|r| O2_Grant2[["O2"]]
+    label1[Take Rule  - Before]:::label === S1_Grant1
+    label2[Take Rule - After]:::label === S1_Grant2
 end
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
