Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -399,8 +399,8 @@ subgraph Grant_Rule
     S1_Grant1[["S1"]] -->|r| O2_Grant1[["O2"]]
     S1_Grant2[["S1"]] -->|g| O1_Grant2[["O1"]] -->|r| O2_Grant2[["O2"]]
     S1_Grant2[["S1"]] ==>|r| O2_Grant2[["O2"]]
-    label1[Take Rule  - Before]:::label === S1_Grant1
-    label2[Take Rule - After]:::label === S1_Grant2
+    label1[Grant Rule  - Before]:::label === S1_Grant1
+    label2[Grant Rule - After]:::label === S1_Grant2
 end
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
