Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -410,3 +410,84 @@ end
 
 :brain: The Take-Grant Model is a permission-based access control model where subjects (users or processes) can take or grant access to objects (files, resources) based on their permissions. The model defines a set of rules that determine how permissions are transferred between subjects and objects, ensuring controlled access and authority delegation.
 
+
+The **Clark-Wilson Model** is a security model designed to enforce data integrity in systems where accuracy, consistency, and authorized modifications are critical. Unlike models such as Bell–LaPadula (which focuses on confidentiality) or Biba (which focuses on integrity at a broad level), the Clark-Wilson Model ensures that only authorized users can make valid changes to data through well-defined processes. This makes it particularly useful in commercial systems, banking, and financial transactions.
+
+Key Concepts of the Clark-Wilson Model are:
+
+- Goal: Ensure data integrity by enforcing rules that prevent unauthorized changes.
+- Separation of Duties: Users cannot modify critical data directly; instead, transactions must be approved and validated before execution.
+- Transformation Procedures (TPs): Authorized processes that change data in a controlled way.
+- Constrained Data Items (CDIs): Critical data that must be protected (e.g., bank records, financial transactions).
+- Unconstrained Data Items (UDIs): Regular data that does not require strict controls.
+- Integrity Verification Procedures (IVPs): Periodic checks that ensure data integrity is maintained.
+
+- Core Rules of the Clark-Wilson Model
+1. Well-Formed Transactions: Users cannot modify critical data directly; all changes must go through authorized procedures (TPs).
+2. Separation of Duties: Users cannot perform both critical functions (e.g., initiating and approving a transaction).
+3. Access Control & Authentication: Only authorized users can execute Transformation Procedures (TPs) on Constrained Data Items (CDIs).
+4. Integrity Verification Procedures (IVPs): The system must periodically verify data integrity and ensure that no unauthorized modifications have occurred.
+
+Strengths of the Clark-Wilson model:
+
+- Prevents unauthorized modifications by requiring approved transactions.
+- Reduces fraud and insider threats by enforcing Separation of Duties.
+- Ensures consistency and reliability, making it ideal for financial and enterprise systems.
+
+Limitations of the Clark-Wilson model:
+- More complex than other models due to its focus on transaction-based security.
+- Requires strict enforcement of Transformation Procedures, which can slow down operations.
+- Not designed for confidentiality, making it less useful for classified or government data protection.
+
+```mermaid
+flowchart TD
+    subgraph "Certification (Before)"
+        CW1[User]
+        CW2[Uncertified T.P.]
+        CW3[CDI: Customer Data]
+        CW1 --> CW2
+        CW2 --> CW3
+    end
+
+    subgraph "Certification (After)"
+        CW1a[User]
+        CW2a[Certified T.P.]
+        CW3a[CDI: Customer Data]
+        CW1a -->|invoke| CW2a
+        CW2a -->|read/write| CW3a
+    end
+
+    subgraph "Enforcement (Before)"
+        CE1[User]
+        CE2[CDI: Financial Report]
+    end
+
+    subgraph "Enforcement (After)"
+        CE1a[User]
+        CE3[T.P.: ApproveReport()]
+        CE2a[CDI: Financial Report]
+        CE1a -->|calls| CE3
+        CE3 -->|writes| CE2a
+    end
+
+    subgraph "Separation of Duties (Before)"
+        SD1[Clerk]
+        SD2[Manager]
+        SD3[T.P.: ApprovePayment()]
+        SD4[CDI: PaymentData]
+    end
+
+    subgraph "Separation of Duties (After)"
+        SD1a[Clerk]
+        SD2a[Manager]
+        SD3a[Certified T.P.]
+        SD4a[CDI: PaymentData]
+        SD1a -->|initiates| SD3a
+        SD2a -->|authorizes| SD3a
+        SD3a -->|executes| SD4a
+    end
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+```
