Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -441,7 +441,7 @@ Limitations of the Clark-Wilson model:
 
 ```mermaid
 flowchart TD
-    subgraph "Certification (Before)"
+    subgraph "Certification - Before"
         CW1[User]
         CW2[Uncertified T.P.]
         CW3[CDI: Customer Data]
@@ -449,7 +449,7 @@ flowchart TD
         CW2 --> CW3
     end
 
-    subgraph "Certification (After)"
+    subgraph "Certification - After"
         CW1a[User]
         CW2a[Certified T.P.]
         CW3a[CDI: Customer Data]
@@ -457,27 +457,27 @@ flowchart TD
         CW2a -->|read/write| CW3a
     end
 
-    subgraph "Enforcement (Before)"
+    subgraph "Enforcement - Before"
         CE1[User]
         CE2[CDI: Financial Report]
     end
 
-    subgraph "Enforcement (After)"
+    subgraph "Enforcement - After"
         CE1a[User]
-        CE3[T.P.: ApproveReport()]
+        CE3[T.P.: ApproveReport]
         CE2a[CDI: Financial Report]
         CE1a -->|calls| CE3
         CE3 -->|writes| CE2a
     end
 
-    subgraph "Separation of Duties (Before)"
+    subgraph "Separation of Duties - Before"
         SD1[Clerk]
         SD2[Manager]
-        SD3[T.P.: ApprovePayment()]
+        SD3[T.P.: ApprovePayment]
         SD4[CDI: PaymentData]
     end
 
-    subgraph "Separation of Duties (After)"
+    subgraph "Separation of Duties - After"
         SD1a[Clerk]
         SD2a[Manager]
         SD3a[Certified T.P.]
