Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -422,7 +422,7 @@ Key Concepts of the Clark-Wilson Model are:
 - Unconstrained Data Items (UDIs): Regular data that does not require strict controls.
 - Integrity Verification Procedures (IVPs): Periodic checks that ensure data integrity is maintained.
 
-- Core Rules of the Clark-Wilson Model
+Core Rules of the Clark-Wilson Model
 1. Well-Formed Transactions: Users cannot modify critical data directly; all changes must go through authorized procedures (TPs).
 2. Separation of Duties: Users cannot perform both critical functions (e.g., initiating and approving a transaction).
 3. Access Control & Authentication: Only authorized users can execute Transformation Procedures (TPs) on Constrained Data Items (CDIs).
@@ -440,15 +440,8 @@ Limitations of the Clark-Wilson model:
 - Not designed for confidentiality, making it less useful for classified or government data protection.
 
 ```mermaid
-flowchart TD
-    subgraph "Certification - Before"
-        CW1[User]
-        CW2[Uncertified T.P.]
-        CW3[CDI: Customer Data]
-        CW1 --> CW2
-        CW2 --> CW3
-    end
 
+flowchart TD
     subgraph "Certification - After"
         CW1a[User]
         CW2a[Certified T.P.]
@@ -457,35 +450,18 @@ flowchart TD
         CW2a -->|read/write| CW3a
     end
 
-    subgraph "Enforcement - Before"
-        CE1[User]
-        CE2[CDI: Financial Report]
+
+    subgraph "Certification - Before"
+        CW1[User]
+        CW2[Uncertified T.P.]
+        CW3[CDI: Customer Data]
+        CW1 --> CW2
+        CW2 --> CW3
     end
 
-    subgraph "Enforcement - After"
-        CE1a[User]
-        CE3[T.P.: ApproveReport]
-        CE2a[CDI: Financial Report]
-        CE1a -->|calls| CE3
-        CE3 -->|writes| CE2a
-    end
 
-    subgraph "Separation of Duties - Before"
-        SD1[Clerk]
-        SD2[Manager]
-        SD3[T.P.: ApprovePayment]
-        SD4[CDI: PaymentData]
-    end
 
-    subgraph "Separation of Duties - After"
-        SD1a[Clerk]
-        SD2a[Manager]
-        SD3a[Certified T.P.]
-        SD4a[CDI: PaymentData]
-        SD1a -->|initiates| SD3a
-        SD2a -->|authorizes| SD3a
-        SD3a -->|executes| SD4a
-    end
+   
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
