Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -459,9 +459,43 @@ flowchart TD
         CW2 --> CW3
     end
 
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 
+```
 
-   
+The *Brewer and Nash Model* is a conflict-of-interest security model designed to prevent users from accessing data that could create an ethical conflict. It ensures that a user cannot access sensitive information from competing organizations, preventing insider trading, financial conflicts, or biased decision-making.
+
+Key Concepts of the Brewer and Nash Model are:
+- Goal: Prevent conflicts of interest by restricting users from accessing data from competing organizations.
+- Dynamic Access Control: A user’s past access history determines what they can access in the future.
+- Company Dataset (CDS): A collection of files and data related to a single company.
+- Conflict of Interest Class (COI): A group of companies that compete with each other (e.g., different banks, law firms, or consulting clients).
+- Access Restriction: Once a user accesses one company’s data, they are blocked from accessing data from competitors within the same Conflict of Interest Class
+
+Core Rules of the Brewer and Nash Model are:
+1. Read Access Rule: A user can only read from one company within a Conflict of Interest Class (COI).
+2. Write Access Rule: A user can only write to a dataset if they have not read any conflicting dataset.
+3. Dynamic Security Enforcement: The model updates restrictions dynamically based on the user’s previous access history.
+
+Strengths of the Brewer and Nash Model:
+
+- Prevents conflicts of interest, making it ideal for law firms, auditors, and financial analysts.
+- Dynamically adapts based on a user’s access history, providing strong security.
+- Ensures ethical business practices by restricting access to sensitive competitor data.
+
+Limitations of the Brewer and Nash Model:
+
+- Not suitable for traditional access control since it focuses on conflicts of interest rather than general security.
+- Hard to implement in large organizations with complex cross-business interactions.
+- May restrict legitimate work if employees need to collaborate across different companies.
+
+```mermaid
+flowchart TD
+    A[User requests access to Company A data] --> B{Has user accessed<br> competing company data?}
+    B -- No --> C[Access granted to Company A]
+    C --> D[User now associated<br> with Company A's conflict class]
+    B -- Yes --> E[Access denied to Company A]
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
