--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -501,3 +501,62 @@ flowchart TD
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 
 ```
+
+The **Graham-Denning Model** is an access control model that defines how subjects (users, processes) can securely create, delete, and manage access rights for objects (files, resources) in a system. It provides a set of rules that regulate how rights are assigned and removed, making it useful for operating systems, databases, and security policies that require structured access control mechanisms.
+
+The Key Concepts of the Graham-Denning Model are:
+
+- Goal: Control how subjects create, delete, and modify other subjects, objects, and their associated rights.
+- Access Control Matrix (ACM): A table that tracks who has what permissions over different objects.
+- Subjects: Users or processes that request access to objects.
+- Objects: Files, databases, or system resources that require protection.
+- Rights: Permissions such as read, write, execute, own, grant.
+
+The model defines eight fundamental operations that manage subjects, objects, and their access rights.
+
+Operations on Subjects and Objects
+1. Create Object – A subject can create a new object (e.g., a file) and becomes its owner.
+2. Create Subject – A subject can create another subject (e.g., a new user or process).
+3. Delete Object – A subject can delete an object, removing all associated rights.
+4. Delete Subject – A subject can delete another subject, revoking its permissions.
+
+Operations on Access Rights
+1. Read Access Rights – A subject can view the access rights assigned to an object.
+2. Grant Access Rights – A subject can grant its own permissions to another subject.
+3. Delete Access Rights – A subject can revoke previously assigned permissions.
+4. Transfer Access Rights – A subject can pass its access rights to another subject, who then assumes control.
+
+Strengths of the Graham-Denning model:
+- Provides structured rules for managing access rights.
+- Supports dynamic access control, allowing permissions to be updated as needed.
+- Useful in multi-user environments, such as operating systems, cloud services, and databases.
+
+Limitations of the Graham-Denning model:
+- Does not enforce security policies on its own—it provides a framework, but implementation details must be defined.
+- Focuses on access control, without addressing integrity or confidentiality like Bell–LaPadula or Biba.
+- Can be complex when managing large-scale systems with many subjects and objects.
+
+```mermaid
+flowchart TD
+    subgraph Subjects
+        A[User A]
+        B[Process B]
+    end
+
+    subgraph Objects
+        F[File X]
+        P[Printer Y]
+    end
+
+    A -->|Request to create| B
+    A -->|Request to create| F
+
+    A -->|Grant Read to File X| F
+    A -->|Transfer Ownership of Printer Y| P
+
+    B -->|Delete File X| F
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+```
